--- a/src/css-components/Days.css
+++ b/src/css-components/Days.css
@@ -3,4 +3,6 @@
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 10px;
     flex-grow: 1;
+    flex-direction: row-reverse;
+    direction: rtl;
   }
