--- a/src/css-pages/Calendar.css
+++ b/src/css-pages/Calendar.css
@@ -8,7 +8,15 @@
   display: flex;
   align-items: center;
   margin: 0.75rem;
+  padding:1rem;
   gap:0.75rem;
+  direction: rtl;
+  position: sticky;
+  top: 0;
+  /* z-index:1; */
+  justify-content: space-evenly;
+  background-color:white;
+
 }
 
 .content {
@@ -16,10 +24,10 @@
 }
 
 .days {
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(auto-fit, minmax(max-content, 1fr));
   gap: 10px;
-  flex-grow: 1;
+  flex-grow: 1; */
 }
 
 .day {
