--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -39,4 +39,8 @@
 
 body {
   font-family: 'Roboto', sans-serif;
+}
+
+button {
+  /* border-radius: 10px; */
 }
