--- a/src/App.css
+++ b/src/App.css
@@ -51,18 +51,21 @@ button {
 
 .slider-container {
   width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-  touch-action: pan-y;
-  margin-top: 10svh;
+  overflow: hidden;
+  position: relative;
 }
 
-.slick-slide > div {
+.slick-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  padding: 10px;
 }
 
 .slick-list {
-  margin: 0 -10px; 
+  margin: 0 auto;
+}
+
+.slick-track {
+  display: flex;
 }
