--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,11 @@ body {
 .slider-item {
   border: 1px solid black;
   margin-right:1rem;
+
+}
+
+.hasLesson:hover{
+  cursor:pointer;
 }
 
 @media (orientation: portrait) {
