--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,9 @@ body {
 .slick-slide {
   z-index: 998;
   text-align: center;
+  /* border: 1px solid yellow;
+  margin:1rem;
+  border-radius: 22px; */
 }
 
 .slick-active.slick-current {
